Adjusted PR process with responsive images

--- a/src/process.html
+++ b/src/process.html
@@ -401,6 +401,66 @@
             Men om du vill ha ett snabbt workflow, så är direkt merge via
             terminalen acceptabelt när du jobbar ensam.<br />
           </p>
+          Här visar jag dock tre bilder som visualiserar bra fördelarna med att
+          använda PR via GitHub, speciellt om en automatiserad utvecklingsmiljö
+          används.
+          <figure>
+            <a
+              href="images/github1.webp"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <picture>
+                <source srcset="images/github1.webp" type="image/webp" />
+                <img
+                  src="images/github1.png"
+                  alt="GitHub-skärm: Pull request checks pågår – granskning och tester körs"
+                  width="1000"
+                  class="responsive-img"
+                />
+              </picture>
+            </a>
+            <figcaption>Bild 1: Pull request checks pågår</figcaption>
+          </figure>
+
+          <figure>
+            <a
+              href="images/github2.webp"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <picture>
+                <source srcset="images/github2.webp" type="image/webp" />
+                <img
+                  src="images/github2.png"
+                  alt="GitHub-skärm: Pull request checks godkända – alla kontroller har klarat"
+                  width="1000"
+                  class="responsive-img"
+                />
+              </picture>
+            </a>
+            <figcaption>Bild 2: Pull request checks godkända</figcaption>
+          </figure>
+
+          <figure>
+            <a
+              href="images/github3.webp"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <picture>
+                <source srcset="images/github3.webp" type="image/webp" />
+                <img
+                  src="images/github3.png"
+                  alt="GitHub-skärm: Pull request har mergeats till main"
+                  width="1000"
+                  class="responsive-img"
+                />
+              </picture>
+            </a>
+            <figcaption>Bild 3: Pull request har mergeats</figcaption>
+          </figure>
+
           <h4>Merge utan en Pull Request</h4>
           <ul>
             <li>
@@ -462,7 +522,7 @@
             <li>Välj "New pull request"</li>
             <li>
               Validera och testa ändringarna som utförts genom att jämföra
-              brancherna. <br />Create pull request, om allt ser
+              brancherna. <br />"Compare & Pull request" om allt ser
               tillfredsställande ut.
             </li>
             <li>Skriv en tydlig beskrivning vad som förändrats.</li>
