added info about nodejs version

--- a/src/process.html
+++ b/src/process.html
@@ -149,8 +149,9 @@
                   ange följande kommando <code>node --version</code>
                 </li>
                 <li>
-                  Om Node.js är installerad kommer versionen att visas. Aktuell
-                  version för Node.js LTS januari 2025 är Node.js v23.7.0.
+                  Om Node.js är installerad kommer versionen att visas. För
+                  januari 2025 är aktuell Node.js LTS med långtidssuport är
+                  v22.13.0, medan senaste version för är v23.7.0.
                 </li>
               </ul>
             </li>
